@@ -17,8 +17,13 @@ Core and Builtins
   kept open but the file object behaves like a closed file. The ``FileIO``
   object also got a new readonly attribute ``closefd``.
 
+- Issue #3689: The list reversed iterator now supports __length_hint__
+  instead of __len__.  Behavior now matches other reversed iterators.
+
 Library
 -------
+
+- FileIO's mode attribute now always includes ``"b"``.
 
 
 What's New in Python 2.6.1
